--- a/app/views/profiles/new.html.erb
+++ b/app/views/profiles/new.html.erb
@@ -1,4 +1,4 @@
-<h1>Become a Coder creating a new profile</h1>
+<h1>Become a Coder! 💻</h1>
 <br>
 <%= simple_form_for(@profile) do |f| %>
   <%= f.input :name %>
@@ -8,3 +8,5 @@
   <%= f.input :category %>
   <%= f.submit %>
 <% end %>
+<br>
+<%= link_to "Back", profiles_path(@profile) %>
