changes on vbiews

--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -1,15 +1,21 @@
 <h1>Book a Dev for your project.</h1>
+<br>
+<%= link_to "Become a Member!", new_profile_path(@profile) %>
+<br>
 
 <% @profiles.each do |profile| %>
 <div class="column">
-  <div class="card">
 
-    <h4> <%= link_to profile.name, profile_path(profile) %></h4>
-    <p>This Dev is a specialist in <%= profile.category %> programming. </p>
+<div class="card-product">
+  <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg" />
+  <div class="card-product-infos">
+    <h4><%= link_to profile.name, profile_path(profile) %></h4>
+    <p>Specialist in <%= profile.category %> programming. </p>
     <p>Read about this Dev: <%= profile.bio %></p>
-    <p><%profile.name%>This programmers Devify rating is: <%= profile.rating %>/10</p>
+    <p><%profile.name%>Devify rating: <%= profile.rating %>/10</p>
     <p>Day Rate Charge: £<%=profile.day_rate %></p>
   </div>
 </div>
+
+</div>
 <% end %>
-<%= link_to "Become a Member!", new_profile_path(@profile) %>
