--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,5 +1,4 @@
-<h1>This is the profile show page</h1>
-<div><%= @profile.name %></div>
+<div><h1><%= @profile.name %></h1></div>
 <br>
 <div><%= @profile.bio %></div>
 <br>
