--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,9 +1,17 @@
 <div><h1><%= @profile.name %></h1></div>
 <br>
-<div><%= @profile.bio %></div>
+<div class="pic-with-bio">
+<img class="avatar-large" src="https://static.vecteezy.com/system/resources/previews/002/275/847/non_2x/male-avatar-profile-icon-of-smiling-caucasian-man-vector.jpg" alt="profile pic">
+<div class="m-2"><%= @profile.bio %></div>
+</div>
 <br>
-<div><%= @profile.rating %></div>
+<div>Rating:
+<h5><% @profile.rating.times do%>
+        <%="⭐️" %>
+      <% end %> /10 </h5>
+</div>
 <br>
-<div><%= @profile.category %> </div>
+<div>Expert on:
+<h5><%= @profile.category %> Developer 💻</div></h5>
 <br>
 <%= link_to "Back", profiles_path(@profile) %>
