--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,4 @@
-<div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
+<div class="navbar navbar-expand-sm navbar-light navbar-lewagon mb-3">
   <div class="container-fluid">
     <%= link_to "/profiles", class: "navbar-brand" do %>
       <%= image_tag 'devify_logo.png' %>
@@ -7,11 +7,13 @@
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto">
           <li class="nav-item">
-            <%= link_to "Login", "#", class: "nav-link" %>
+            <%= link_to "Signup", "/users/sign_up", class: "nav-link" %>
+          </li>
+          <li class="nav-item">
+            <%= link_to "Login", "/users/sign_in", class: "nav-link" %>
           </li>
 
         <%# else %>
