show and index finished

--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -1,6 +1,6 @@
-<h1>Book a Dev for your project.</h1>
-<br>
-<%= link_to "Become a Member!", new_profile_path(@profile) %>
+<h1 class="m-3">Book a Dev for your project</h1>
+
+<div class="btn btn-light"><%= link_to "Become a Coder!", new_profile_path(@profile) %> </div>
 <br>
 
 <% @profiles.each do |profile| %>
