--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,4 @@
-<div class="navbar navbar-expand-sm navbar-light navbar-lewagon mb-3">
+<div class="navbar navbar-expand-sm navbar-light navbar-lewagon mb-3 sticky-top">
   <div class="container-fluid">
     <%= link_to "/profiles", class: "navbar-brand" do %>
       <%= image_tag 'devify_logo.png' %>
