--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -9,18 +9,19 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto">
+        <% if user_signed_in? %>
+          <li class="nav-item">
+            <%= link_to "Logout", destroy_user_session_path, data: { turbo_method: :delete, turbo_confirm: "Are you sure?" }, class: "nav-link" %>
+          </li>
+
+        <% else %>
           <li class="nav-item">
             <%= link_to "Signup", "/users/sign_up", class: "nav-link" %>
           </li>
           <li class="nav-item">
             <%= link_to "Login", "/users/sign_in", class: "nav-link" %>
           </li>
-
-        <%# else %>
-          <!--li class="nav-item"-->
-            <%#= link_to "Login", new_user_session_path, class: "nav-link" %>
-          <!--/li-->
-        <%# end %>
+         <% end %>
       </ul>
     </div>
   </div>
