--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -1,2 +1,9 @@
 // Import page-specific CSS files here.
 @import "home";
+
+.card{
+  padding: 1.5em .5em .5em;
+  border-radius: 1.3em;
+  text-align: center;
+  box-shadow: 0 1px 4px rgba(150, 150, 150, 0.2);
+}
