--- a/app/views/bookings/_new.html.erb
+++ b/app/views/bookings/_new.html.erb
@@ -1,16 +1,14 @@
-
-<h1>bookings form</h1>
-
-<div class= "form">
-  <%= simple_form_for [@profile, @booking] do |f| %>
-    <%= f.input :start_date, as: :date, html5: true%>
-    <%= f.input :end_date, as: :date, html5: true%>
-   <%# <div> div where aditional user booking would live
-   ie > days diference between start and end days (min 1)
-   @profile.day_rate <check params if just id or what>
-   work out total cost here
-   </div> %>
-   <%= f.submit "Submit booking", class: "btn btn-primary" %>
-    <%# <%= f.button :submit, "Book #{@profile.name}?", confim: "Are you sure?" %>
+<div class= "booking-form">
+   <%= simple_form_for [@profile, @booking] do |f| %>
+    <%= f.input :start_date, as: :date, html5: true %>
+    <%= f.input :end_date, as: :date, html5: true %>
+    <div class= "bookingcosts">
+      <p> <%= @profile.name%>'s day rate is £<%= @profile.day_rate%>
+      <div class="total">
+     <%# <h3> Total cost: <%= @profile.day_rate * (end_date%>
+     </div>
+   </div>
+   <%# = f.submit "Submit booking",  %>
+   <%= f.submit "Book #{(@profile.name).split(" ").first}?", class: "btn btn-primary" %>
   <%end%>
 </div>
