minor superficial button changes

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -9,6 +9,11 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto">
+          <div id = "sign up button">
+            <%= link_to new_profile_path, { class: "btn btn-primary" } do %>
+              Become A Dev
+            <% end%>
+          </div>
         <% if user_signed_in? %>
           <li class="nav-item">
             <%= link_to "Logout", destroy_user_session_path, data: { turbo_method: :delete, turbo_confirm: "Are you sure?" }, class: "nav-link" %>
