--- a/app/views/bookings/_new.html.erb
+++ b/app/views/bookings/_new.html.erb
@@ -1,14 +1,16 @@
 <div class= "booking-form">
+  <h2> Book <%= @profile.name %> </h2>
+  <p> <%= @profile.name%>'s day rate is £<%= @profile.day_rate%> </p>
    <%= simple_form_for [@profile, @booking] do |f| %>
     <%= f.input :start_date, as: :date, html5: true %>
     <%= f.input :end_date, as: :date, html5: true %>
     <div class= "bookingcosts">
-      <p> <%= @profile.name%>'s day rate is £<%= @profile.day_rate%>
+
       <div class="total">
      <%# <h3> Total cost: <%= @profile.day_rate * (end_date%>
      </div>
    </div>
-   <%# = f.submit "Submit booking",  %>
    <%= f.submit "Book #{(@profile.name).split(" ").first}?", class: "btn btn-primary" %>
+   <br>
   <%end%>
 </div>
