--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -3,30 +3,34 @@
 
 <br>
 <div class="container">
-<div><h1><%= @profile.name %></h1></div>
-<div class="pic-with-bio">
-<img class="avatar-large" src="https://static.vecteezy.com/system/resources/previews/002/275/847/non_2x/male-avatar-profile-icon-of-smiling-caucasian-man-vector.jpg" alt="profile pic">
-<div class="m-2"><%= @profile.bio %></div>
-</div>
-<br>
-<div>Rating:
-<h5><% stars.times do%>
-        <%="⭐️" %>
-      <% end %>
-      <% 10 - minus_starts.times do%>
-        <%="☆" %>
-      <% end %>
+  <div><h1><%= @profile.name %></h1></div>
+    <div class="pic-with-bio">
+      <img class="avatar-large" src="https://static.vecteezy.com/system/resources/previews/002/275/847/non_2x/male-avatar-profile-icon-of-smiling-caucasian-man-vector.jpg" alt="profile pic">
+      <div class="m-2"><%= @profile.bio %></div>
+    </div>
+    <br>
+    <div>Rating:
+      <h5>
+        <% stars.times do%>
+          <%="⭐️" %>
+        <% end %>
+        <% 10 - minus_starts.times do%>
+          <%="☆" %>
+        <% end %>
       </h5>
-  <div>Expert on:
-<h5><%= @profile.category %> Developer 💻</div></h5>
+    </div>
+
+    <div>Expert on:
+      <h5><%= @profile.category.capitalize %> Developer 💻</h5>
+    </div>
+
+  <br>
+  <%= render "bookings/new"%>
+  <br>
+  <br>
+  <%= link_to profiles_path(@profile), { class: "btn btn-primary" } do %>
+      Back To All Devs
+    <% end %>
+  <br>
+
 </div>
-</div>
-<br>
-
-<div><%= @profile.category %> </div>
-
-<%= render "bookings/new"%>
-
-
-<br>
-<%= link_to "Back", profiles_path(@profile) %>
