fixed navbar scrolling issue

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,9 +1,9 @@
 
-body,
-html {
-    width: 100%;
-	height: 100%;
-}
+// body,
+// html {
+//     width: 100%;
+// 	height: 100%;
+// }
 
 body, p {
 	color: #707375;
@@ -1967,7 +1967,7 @@ a:hover.back-to-top {
 	/* Navigation */
 	.navbar {
 		padding-top: 1.75rem;
-		background-color: transparent;
+		// background-color: transparent;
 		box-shadow: none;
 		transition: all 0.2s;
 	}
