--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -4,7 +4,8 @@
       <% @profiles.each do |profile| %>
       <div class="col-md-3 mb-4">
         <div class="card rounded-7" style="width: 18rem; padding: 10px;">
-          <img class="card-img-top" src="..." alt="profile pic">
+          <%= cl_image_tag profile.photo.key, height: 150, width: 250, crop: :fill %>
+          <div class="card-img-top" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path profile.photo.key, height: 300, crop: :fill %>')"></div>
           <div class="card-body">
             <h5 class="card-title"><%=profile.name%></h5>
             <p class="card-text">Specialty: <%= profile.category %> programming. </p>
