--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -4,10 +4,10 @@
 <br>
 <div class="container">
   <div><h1><%= @profile.name %></h1></div>
-    <div class="pic-with-bio">
-      <img class="avatar-large" src="https://static.vecteezy.com/system/resources/previews/002/275/847/non_2x/male-avatar-profile-icon-of-smiling-caucasian-man-vector.jpg" alt="profile pic">
-      <div class="m-2"><%= @profile.bio %></div>
-    </div>
+      <div class="pic-with-bio">
+        <%= cl_image_tag @profile.photo.key, height: 250, width: 250, crop: :fill %>
+        <div class="px-3"><%= @profile.bio %></div>
+      </div>
     <br>
     <div>Rating:
       <h5>
