--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -3,13 +3,17 @@
 
 <br>
 <div class="container">
+
   <div><h1><%= @profile.name %></h1></div>
+  <div class="row">
       <div class="pic-with-bio">
         <%= cl_image_tag @profile.photo.key, height: 250, width: 250, crop: :fill %>
         <div class="px-3"><%= @profile.bio %></div>
-            </div>
+      </div>
+  </div>
 
-      <div class="flex-container">
+
+  <div class="flex-container">
     <br>
     <div class="flex-child">
     <div>Rating:
