--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,4 +10,5 @@
 // Your CSS partials
 @import "components/index";
 @import "components/flex_containers";
+@import "components/btn_devifyd";
 @import "pages/index";
