--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -1,6 +1,6 @@
 // Import page-specific CSS files here.
 @import "home";
-
+@import "../components/index";
 .card{
   padding: 1.5em .5em .5em;
   border-radius: 1.3em;
