--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,110 +1,100 @@
-    <header id="header" class="header">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-6 col-xl-5">
-                    <div class="text-container">
-                        <h1 class="h1-large">Hire the best <span id="js-rotating">Frontend, Backend, Fullstack</span> developers.</h1>
-                        <p class="p-large">Devify helps you find the perfect developer for your project.</p>
-                        <a class="btn-solid-lg page-scroll" href="#jobPanel">Get Started</a>
-                    </div>
-                </div>
-                <div class="col-lg-6 col-xl-7">
-                    <div class="image-container">
 
-
-                    </div>
-                </div>
+      <div class="container">
+    <div class="row">
+        <div class="col-lg-12 col-xl-8">
+            <div class="text-container">
+                <h1 class="h1-large">Hire the best <span id="span-header">Frontend, Backend, Fullstack</span> developers.</h1>
+                <p class="p-large">Devify helps you find the perfect developer for your project.</p>
+                <a class="btn-solid-lg page-scroll" href="/profiles">View All Developers</a>
             </div>
         </div>
-    </header>
+        <div class="col-lg-12 col-xl-4">
+        <%= image_tag 'heroimage.png', width: '280', height: '280' %>
 
-    <div class="basic-1">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-6">
-                    <div class="text-container bg-gray">
-                        <h4><i class="fas fa-user-tie"></i>For Job Seekers</h4>
-                        <p>At Devify we hire out the best developers in the industry.</p>
-                    </div> <!-- end of text-container -->
-                </div> <!-- end of col -->
-                <div class="col-lg-6">
-                    <div class="text-container bg-gray">
-                        <h4><i class="fas fa-building"></i>For Employers</h4>
-                        <p>All our Devs are 100% Green Rake certified.</p>
-                    </div> <!-- end of text-container -->
-                </div> <!-- end of col -->
-            </div> <!-- end of row -->
-        </div> <!-- end of container -->
-    </div> <!-- end of basic-1 -->
-    <!-- end of introduction -->
-<!-- Services -->
-<div class="basic-6 text-center">
+
+</div>
+
+<div class="basic-1">
     <div class="container">
         <div class="row">
-            <div class="col-lg-12">
-                <h2 class="h2-heading">Select the best developer for your project!</h2>
-                <p class="p-heading">We provide the best developers to all industry verticals.</p>
+            <div class="col-lg-6">
+                <div class="text-container bg-gray">
+                    <h4><i class="fas fa-user-tie"></i>For businesses seeking top candidates</h4>
+                    <p>All our Devs are 100% Green Rake certified</p>
+                </div> <!-- end of text-container -->
             </div> <!-- end of col -->
-        </div> <!-- end of row -->
-
-        <div class="row">
-            <div class="col-lg-12">
-
-                <!-- Service -->
-                <div class="service-container">
-                    <div class="service-icon">
-                        <span class="fas fa-rocket"></span>
-                    </div> <!-- end of service-icon -->
-                    <div class="service-text">
-                        <h4>Le Wagon Trained</h4>
-                        <p>All our developers are trained within the Le Wagon Bootcamp.</p>
-                    </div> <!-- end of service-text -->
-                </div> <!-- end of service-container -->
-                <!-- end of service -->
-
-                <!-- Service -->
-                <div class="service-container">
-                    <div class="service-icon">
-                        <span class="fas fa-users"></span>
-                    </div> <!-- end of service-icon -->
-                    <div class="service-text">
-                        <h4>100% Rake Guarantee</h4>
-                        <p>Our developers are nearly 90% more likely to rake with "good style" than other programmers.</p>
-                    </div> <!-- end of service-text -->
-                </div> <!-- end of service-container -->
-                <!-- end of service -->
-
-                <!-- Service -->
-                <div class="service-container">
-                    <div class="service-icon">
-                        <span class="fas fa-user-tie"></span>
-                    </div> <!-- end of service-icon -->
-                    <div class="service-text">
-                        <h4>Comprehensively skilled</h4>
-                        <p>Our developers know, Ruby on Rails, JavaScript, HTML, CSS, SQL.</p>
-                    </div> <!-- end of service-text -->
-                </div> <!-- end of service-container -->
-                <!-- end of service -->
-
-                <!-- Service -->
-                <div class="service-container">
-                    <div class="service-icon">
-                        <span class="fas fa-people-carry"></span>
-                    </div> <!-- end of service-icon -->
-                    <div class="service-text">
-                        <h4>Trained for Projects</h4>
-                        <p>Our developers are more than happy to work with you to manage expectations and complete projects within a given timeframe.</p>
-                    </div> <!-- end of service-text -->
-                </div> <!-- end of service-container -->
-                <!-- end of service -->
-
+            <div class="col-lg-6">
+                <div class="text-container bg-gray">
+                    <h4><i class="fas fa-building"></i>For devs looking for the best projects</h4>
+                    <p>We match you with the top software projects</p>
+                </div> <!-- end of text-container -->
             </div> <!-- end of col -->
         </div> <!-- end of row -->
     </div> <!-- end of container -->
-</div> <!-- end of basic-6 -->
-<!-- end of services -->
+</div> <!-- end of basic-1 -->
 
+<!-- Services -->
+<div class="basic-1">
+  <div class="container">
+      <div class="row">
+          <div class="col-lg-6">
+              <!-- Service 1 -->
+              <div class="service-container">
+                  <div class="service-icon">
+                      <!-- Add your service icon content here -->
+                  </div>
+                  <div class="service-text">
+                      <h4><span class="fas fa-rocket"></span> Le Wagon Trained</h4>
+                      <p>All of our developers have been trained within the Le Wagon Bootcamp over a period of two months.</p>
+                  </div>
+              </div>
+              <!-- end of Service 1 -->
+          </div>
 
+          <div class="col-lg-6">
+              <!-- Service 2 -->
+              <div class="service-container">
+                  <div class="service-icon">
+                      <!-- Add your service icon content here -->
+                  </div>
+                  <div class="service-text">
+                      <h4><span class="fas fa-users"></span> 100% Rake Guarantee</h4>
+                      <p>Our developers are nearly 90% more likely to rake with "good style" than other programmers.</p>
+                  </div>
+              </div>
+              <!-- end of Service 2 -->
+          </div>
+
+          <div class="col-lg-6">
+              <!-- Service 3 -->
+              <div class="service-container">
+                  <div class="service-icon">
+                      <!-- Add your service icon content here -->
+                  </div>
+                  <div class="service-text">
+                      <h4><span class="fas fa-user-tie"></span> Comprehensively skilled</h4>
+                      <p>Our developers have been extensively trained in Ruby on Rails, JavaScript, HTML, CSS, SQL.</p>
+                  </div>
+              </div>
+              <!-- end of Service 3 -->
+          </div>
+
+          <div class="col-lg-6">
+              <!-- Service 4 -->
+              <div class="service-container">
+                  <div class="service-icon">
+                      <!-- Add your service icon content here -->
+                  </div>
+                  <div class="service-text">
+                      <h4><span class="fas fa-people-carry"></span> Trained for Projects</h4>
+                      <p>Our developers are more than happy to work with you to manage expectations and complete projects within a given timeframe.</p>
+                  </div>
+              </div>
+              <!-- end of Service 4 -->
+          </div>
+      </div>
+  </div>
+</div>
 
     <!-- Statistics -->
     <div class="counter">
@@ -148,64 +138,6 @@
     </div> <!-- end of counter -->
     <!-- end of statistics -->
 
-
-    <!-- Footer -->
-    <div class="footer bg-gray">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="footer-col first">
-                        <h6>About Devify</h6>
-                        <p class="p-small">Devify is a one stop shop for hiring developers.</p>
-                    </div> <!-- end of footer-col -->
-                    <div class="footer-col second">
-
-                    </div> <!-- end of footer-col -->
-                    <div class="footer-col third">
-                        <span class="fa-stack">
-                            <a href="#your-link">
-                                <i class="fas fa-circle fa-stack-2x"></i>
-                                <i class="fab fa-facebook-f fa-stack-1x"></i>
-                            </a>
-                        </span>
-                        <span class="fa-stack">
-                            <a href="#your-link">
-                                <i class="fas fa-circle fa-stack-2x"></i>
-                                <i class="fab fa-twitter fa-stack-1x"></i>
-                            </a>
-                        </span>
-                        <span class="fa-stack">
-                            <a href="#your-link">
-                                <i class="fas fa-circle fa-stack-2x"></i>
-                                <i class="fab fa-pinterest-p fa-stack-1x"></i>
-                            </a>
-                        </span>
-                        <span class="fa-stack">
-                            <a href="#your-link">
-                                <i class="fas fa-circle fa-stack-2x"></i>
-                                <i class="fab fa-instagram fa-stack-1x"></i>
-                            </a>
-                        </span>
-                        <p class="p-small">We would love to hear from you <a href="mailto:contact@devify.com"><strong>contact@devify.com</strong></a></p>
-                    </div> <!-- end of footer-col -->
-                </div> <!-- end of col -->
-            </div> <!-- end of row -->
-        </div> <!-- end of container -->
-    </div> <!-- end of footer -->
-    <!-- end of footer -->
-
-
-    <!-- Copyright -->
-    <div class="copyright bg-gray">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <p class="p-small">Copyright ©Devify, 2023.</a></p>
-                </div> <!-- end of col -->
-            </div> <!-- enf of row -->
-        </div> <!-- end of container -->
-    </div> <!-- end of copyright -->
-    <!-- end of copyright -->
 
 
     <!-- Scripts -->
