--- a/app/views/profiles/new.html.erb
+++ b/app/views/profiles/new.html.erb
@@ -4,9 +4,10 @@
   <%= f.input :name %>
   <%= f.input :bio %>
   <%= f.input :day_rate %>
-  <%= f.hidden_field :rating, value: 5 %>
+  <%= f.hidden_field :rating, value: 0 %>
   <%= f.input :category %>
+  <%= f.input :image, as: :file, label: "Upload or picture of yourself" %>
   <%= f.submit %>
 <% end %>
 <br>
-<%= link_to "Back", profiles_path(@profile) %>
+<%= link_to "Back", profiles_path %>
