--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -34,12 +34,12 @@
 </div> <!-- end of basic-1 -->
 
 <!-- Services -->
-<div class="basic-1">
-  <div class="container">
+<div class="basic-1" >
+ <div class="container">
       <div class="row">
           <div class="col-lg-6">
               <!-- Service 1 -->
-              <div class="service-container">
+              <div class="service-container" >
                   <div class="service-icon">
                       <!-- Add your service icon content here -->
                   </div>
@@ -87,7 +87,7 @@
                   </div>
                   <div class="service-text">
                       <h4><span class="fas fa-people-carry"></span> Trained for Projects</h4>
-                      <p>Our developers are more than happy to work with you to manage expectations and complete projects within a given timeframe.</p>
+                      <p>Our developers are more than happy to work with you to ensure you meet your deadlines.</p>
                   </div>
               </div>
               <!-- end of Service 4 -->
