--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -18,7 +18,7 @@
           </div>
           <% else %>
             <div class="card-img-top" style="background-image"></div>
-            <img src="../../../db/images/placeholder.png" height="150" width="250" alt="A profile picture" />
+            <img src="https://res.cloudinary.com/dgqqot40q/image/upload/v1685635592/premium-design-of-programmer-professional-worker-avatar-vector_y9bp2n.jpg" alt="A placeholder profile picture" height="150" width="250">
             <div class="card-body">
               <h5 class="card-title"><%=profile.name%></h5>
               <p class="card-text">Specialty: <%= profile.category %> programming. </p>
