profile picture can be uploaded now and its saved

--- a/app/views/profiles/new.html.erb
+++ b/app/views/profiles/new.html.erb
@@ -6,7 +6,7 @@
   <%= f.input :day_rate %>
   <%= f.hidden_field :rating, value: 0 %>
   <%= f.input :category %>
-  <%= f.input :image, as: :file, label: "Upload or picture of yourself" %>
+  <%= f.input :photo, as: :file, label: "Upload a picture of yourself" %>
   <%= f.submit %>
 <% end %>
 <br>
