ammended the containers in the show,index and new dev

--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -1,5 +1,5 @@
 <div class="d-flex align-items-center justify-content-center vh-35">
-  <div class="container">
+  <div class="container m-1">
     <div class="row">
       <% @profiles.each do |profile| %>
       <div class="col-md-3 mb-4">
