--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -2,7 +2,7 @@
 <% minus_starts = 10 - @profile.rating %>
 
 <br>
-<div class="container">
+<div class="container m-1">
 
   <div><h1><%= @profile.name %></h1></div>
       <div class="pic-with-bio">
