--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -2,40 +2,41 @@
 <% minus_starts = 10 - @profile.rating %>
 
 <br>
-<div class="container m-1">
-
-  <div><h1><%= @profile.name %></h1></div>
-      <div class="pic-with-bio">
-        <%= cl_image_tag @profile.photo.key, height: 250, width: 250, crop: :fill if @profile.photo.key != nil%>
-        <div class="px-3"><%= @profile.bio %></div>
-            </div>
-
-      <div class="flex-container">
-    <br>
-    <div class="flex-child">
-    <div>Rating:
-      <h5>
+<div class="container m-0 mr-0">
+  <div class ="d-flex">
+  <div div class ="container mt-0 mx-0 w-75">
+    <div><h1><%= @profile.name %></h1></div>
+    <div class="pic-with-bio">
+      <%= cl_image_tag @profile.photo.key, height: 250, width: 250, crop: :fill if @profile.photo.key != nil%>
+      <div class="px-3"><%= @profile.bio %></div>
+    </div>
+    <div class="flex-container">
+      <div class="flex-child">
+        <div>Rating:
+        <h5>
         <% stars.times do%>
           <%="⭐️" %>
         <% end %>
         <% 10 - minus_starts.times do%>
           <%="☆" %>
         <% end %>
-      </h5>
+        </h5>
+        </div>
+        <div>Expert on:
+        <h5><%= @profile.category.capitalize %> Developer 💻</h5>
+        </div>
     </div>
-    <div>Expert on:
-      <h5><%= @profile.category.capitalize %> Developer 💻</h5>
     </div>
   </div>
-    <div class="flex-child card rounded-7" >
 
-  <%=render "bookings/new"%>
-      </div>
+  <div class="flex-child card rounded-7 ml-3 w-25" >
+      <%=render "bookings/new"%>
   </div>
-  </div>
-  <%= link_to profiles_path(@profile), { class: "btn btn-primary" } do %>
-      Back To All Devs
-    <% end %>
+</div>
+
   <br>
-
+  </div>
+  <%= link_to profiles_path(@profile), { class: "btn btn-primary mx-4 mt-5" } do %>
+      Back To All Devs
+  <% end %>
 </div>
