users bookings calendar implemented, work in progress

--- a/app/views/bookings/user_bookings.html.erb
+++ b/app/views/bookings/user_bookings.html.erb
@@ -52,3 +52,22 @@
   <br>
   <br>
 </div>
+
+
+
+
+
+
+
+
+
+
+
+<div>
+<h1>Calendar</h1>
+
+<%= @profile_bookings.each do |book| %>
+<%= book %>
+<% end %>
+
+</div>
