--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,8 +20,7 @@
   <body>
     <%= render 'shared/navbar'%>
     <%= yield %>
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
+    <%= render 'shared/flashes'%>
     <%= render 'shared/footer'%>
 
   </body>
