--- a/app/views/bookings/edit.html.erb
+++ b/app/views/bookings/edit.html.erb
@@ -1,18 +1,13 @@
 <div class = "container">
   <h1> Adjust Booking with <%= @profile.name %> </h1>
 
-  <div data-controller="total-cost-booking-page" class= "booking-form">
-    <p> <%= @profile.name%>'s day rate is £ <span data-total-cost-booking-page-target="rate"><%= @profile.day_rate%></span> </p>
-   <%= simple_form_for [@profile, @booking] do |f| %>
-    <%= f.input :start_date, as: :date, html5: true, class: "clickable-input" %>
-    <%= f.input :end_date, as: :date, html5: true, class: "clickable-input" %>
-
-    <div class="total">
-      <p data-total-cost-booking-page-target="price"> The new total is: £0 </p>
-    </div>
-
-   <%= f.submit "Update!", class: "btn btn-primary" %>
-   <br>
+  <div class= "booking-form">
+    <p> <%= @profile.name%>'s day rate is £ <%= @profile.day_rate%></p>
+  <%= simple_form_for [@profile, @booking] do |f| %>
+    <%= f.input :start_date, as: :date, html5: true %>
+    <%= f.input :end_date, as: :date, html5: true %>
+    <%= f.submit "Update!", class: "btn btn-primary" %>
+    <br>
   <%end%>
 </div>
 </div>
