--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -12,6 +12,6 @@
 .btn.btn-primary:hover {
   background-color: #ffffff !important;
   border-radius: #80C5BD !important;
-  color: #80C5BD; /* Change the color value to the desired color */
-  text-decoration: none; /* Remove the underline */
+  color: #80C5BD;
+  text-decoration: none;
 }
