--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -32,8 +32,8 @@
           </div>
 
           <div id = "check_bookingsbutton">
-            <%= link_to user_bookings_path, { class: "btn btn-sm btn-primary mx-1" } do %>
-              Booked Devs
+            <%= link_to user_bookings_path, { class: "btn btn-sm btn-secondary mx-1" } do %>
+              Your Bookings
             <% end%>
           </div>
 
